[gd_scene load_steps=7 format=2]

[ext_resource path="res://SaveScore.gd" type="Script" id=1]
[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 24
border_width_top = 24
border_width_right = 24
border_width_bottom = 24
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 16.0
expand_margin_bottom = 16.0

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Panel" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -192.0
margin_right = 128.0
margin_bottom = 192.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_left = 24.0
margin_top = 24.0
margin_right = 232.0
margin_bottom = 360.0
custom_constants/separation = 45

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 208.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "Your Final Score is "
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 106.0
margin_right = 208.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "0000000"
align = 1
valign = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 180.0
margin_right = 208.0
margin_bottom = 195.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "Player Name"

[node name="Button" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 240.0
margin_right = 208.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 4 )
text = "Submit Score"

[node name="Button2" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 306.0
margin_right = 208.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 4 )
text = "Play Again"
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
